ingress-hello-2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx-internal"
spec:
  rules:
    - host: test.test.pro
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: hello-world-2
              port:
                number: 80
